--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-# QUARKUS SERVER SETTINGS
+###############################################
+# SERVIDOR HTTP
+###############################################
 quarkus.http.port=8080
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
@@ -6,22 +8,58 @@ quarkus.http.cors.methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
 quarkus.http.cors.headers=Content-Type,Authorization
 quarkus.http.cors.access-control-max-age=24H
 
-# BANCO DE DADOS (Neon PostgreSQL)
+
+###############################################
+# BANCO DE DADOS — NEON POSTGRESQL (POOLER)
+###############################################
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=neondb_owner
 quarkus.datasource.password=npg_4Wg8TrdjLqSm
 quarkus.datasource.jdbc.url=jdbc:postgresql://ep-icy-surf-acnqxgrg-pooler.sa-east-1.aws.neon.tech:5432/neondb?sslmode=require
-quarkus.datasource.jdbc.min-size=1
-quarkus.datasource.jdbc.max-size=5
-quarkus.datasource.jdbc.acquisition-timeout=20s
 
+# Pool otimizado
+quarkus.datasource.jdbc.min-size=3
+quarkus.datasource.jdbc.max-size=12
+quarkus.datasource.jdbc.acquisition-timeout=10s
+
+# Evita quedas de conexão no Neon
+quarkus.datasource.jdbc.max-lifetime=30M
+quarkus.datasource.jdbc.idle-removal-interval=5M
+
+
+###############################################
 # HIBERNATE ORM
+###############################################
 quarkus.hibernate-orm.database.generation=update
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
+quarkus.hibernate-orm.jdbc.statement-batch-size=20
 
-# SWAGGER / OPENAPI
+
+###############################################
+# OPENAPI (Swagger)
+###############################################
 quarkus.smallrye-openapi.path=/openapi
 quarkus.swagger-ui.path=/swagger-ui
+quarkus.swagger-ui.always-include=true
 
-# JTA TRANSACTIONS
+
+###############################################
+# TRANSAÇÕES
+###############################################
+# 5 minutos é mais que suficiente
 quarkus.transaction-manager.default-transaction-timeout=300
+
+
+###############################################
+# LOGGING
+###############################################
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c] %s%e%n
+quarkus.log.console.level=INFO
+
+
+###############################################
+# THREADS — MELHOR PARA RENDER
+###############################################
+# Equilíbrio entre rapidez e uso de CPU
+quarkus.thread-pool.core-threads=20
+quarkus.thread-pool.max-threads=100
