--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ###############################################
 # SERVIDOR HTTP
 ###############################################
-quarkus.http.port=8080
+quarkus.http.port=${PORT:8080}
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
 quarkus.http.cors.methods=GET,POST,PUT,DELETE,PATCH,OPTIONS
@@ -17,14 +17,15 @@ quarkus.datasource.username=neondb_owner
 quarkus.datasource.password=npg_4Wg8TrdjLqSm
 quarkus.datasource.jdbc.url=jdbc:postgresql://ep-icy-surf-acnqxgrg-pooler.sa-east-1.aws.neon.tech:5432/neondb?sslmode=require
 
-# Pool otimizado
-quarkus.datasource.jdbc.min-size=3
-quarkus.datasource.jdbc.max-size=12
+# Pool ajustado para RAM limitada do Railway (512–1024 MB)
+quarkus.datasource.jdbc.min-size=1
+quarkus.datasource.jdbc.max-size=5
 quarkus.datasource.jdbc.acquisition-timeout=10s
 
-# Evita quedas de conexão no Neon
-quarkus.datasource.jdbc.max-lifetime=30M
+# Evita quedas por timeout do Neon
+quarkus.datasource.jdbc.max-lifetime=25M
 quarkus.datasource.jdbc.idle-removal-interval=5M
+quarkus.datasource.jdbc.validation-timeout=5s
 
 
 ###############################################
@@ -46,8 +47,8 @@ quarkus.swagger-ui.always-include=true
 ###############################################
 # TRANSAÇÕES
 ###############################################
-# 5 minutos é mais que suficiente
-quarkus.transaction-manager.default-transaction-timeout=300
+# Timeout global seguro
+quarkus.transaction-manager.default-transaction-timeout=120
 
 
 ###############################################
@@ -58,8 +59,11 @@ quarkus.log.console.level=INFO
 
 
 ###############################################
-# THREADS — MELHOR PARA RENDER
+# THREADS — OTIMIZADO PARA RAILWAY
 ###############################################
-# Equilíbrio entre rapidez e uso de CPU
-quarkus.thread-pool.core-threads=20
-quarkus.thread-pool.max-threads=100
+# Railway Free = pouca CPU.  
+# Quarkus com muitas threads = throttle + lentidão.
+# O ideal é reduzir para não estourar CPU.
+quarkus.thread-pool.core-threads=8
+quarkus.thread-pool.max-threads=30
+quarkus.thread-pool.queue-size=200
